[chg] Added responsiveness to header

--- a/dev/assets/index.html
+++ b/dev/assets/index.html
@@ -11,63 +11,68 @@
 </head>
 <body class="page">
     <header class="header" id="home">
-        <div class="header__navigation">
-            <div class="logo header__logo clearfix">
-                <a class="logo__link"><strong>Drone</strong>Zone</a>
+        <div class="header__content">
+            <div class="header__navigation">
+                <div class="logo header__logo clearfix">
+                    <a class="logo__link"><strong>Drone</strong>Zone</a>
+                </div>
+                <div class="header__burger clearfix">
+                    <button type="button" class="burger burger_size_normal"></button>
+                </div>
+                <nav class="menu header__menu">
+                    <ul class="menu__items">
+                        <li class="menu__item"><a href="#home" class="menu__link">Home</a></li>
+                        <li class="menu__item"><a href="#about" class="menu__link">About</a></li>
+                        <li class="menu__item"><a href="#drones" class="menu__link">Our drones</a></li>
+                        <li class="menu__item"><a href="#products" class="menu__link">Our realizations</a></li>
+                        <li class="menu__item"><a href="#contact" class="menu__link">Contact</a></li>
+                    </ul>
+                </nav>
             </div>
-            <button type="button" class="burger header__burger burger_size_normal clearfix"></button>
-            <nav class="menu clearfix">
-                <ul class="menu__items">
-                    <li class="menu__item"><a href="#home" class="menu__link">Home</a></li>
-                    <li class="menu__item"><a href="#about" class="menu__link">About</a></li>
-                    <li class="menu__item"><a href="#drones" class="menu__link">Our drones</a></li>
-                    <li class="menu__item"><a href="#products" class="menu__link">Our realizations</a></li>
-                    <li class="menu__item"><a href="#contact" class="menu__link">Contact</a></li>
-                </ul>
-            </nav>
+            <section class="tagline header__tagline">
+                <h1 class="title tagline__title">Film your event with us!</h1>
+                <p class="text tagline__text text_font-size_s text_line-height_s">
+                    Pellentesque eget nunc sit amet urna ullamcorper fermentum et eu leo.
+                </p>
+                <p class="text tagline__text text_font-size_s text_line-height_s">
+                    Nunc vel nibh tempor, pharetra lectus congue, luctus orci.
+                </p>
+                <div class="tagline__buttons-container">
+                    <a class="button button_theme_transparent">Ask for price</a>
+                    <a class="button button_theme_transparent button_role_play-source">Watch video</a>
+                </div>
+            </section>
         </div>
-        <section class="tagline header__tagline">
-            <h1 class="title tagline__title">Film your event with us!</h1>
-            <p class="text tagline__text text_font-size_s text_line-height_m">
-                Pellentesque eget nunc sit amet urna ullamcorper fermentum et eu leo.
-            </p>
-            <p class="text tagline__text text_font-size_s text_line-height_m">
-                Nunc vel nibh tempor, pharetra lectus congue, luctus orci.
-            </p>
-            <div class="tagline__buttons-container">
-                <a class="button button_theme_transparent">Ask for price</a>
-                <a class="button button_theme_transparent button_role_play-source">Watch video</a>
-            </div>
-        </section>
+        <div class="header__image-container"></div>
     </header>
     <section class="about page__about" id="about">
         <div class="about__principles flex-container flex-container_wrapped flex-container_align_center">
             <div class="principle">
                 <i class="principle__icon principle__icon_from-air"></i>
                 <span class="principle__title text-gradient text-gradient_color_redorange">From air</span>
-                <p class="principle__description text text_font-size_s text_line-height_m">Pellentesque eget nunc sit amet urna ullamcorper fermentum et eu leo.</p>
+                <p class="principle__description text text_font-size_s text_line-height_s">Pellentesque eget nunc sit amet urna ullamcorper fermentum et eu leo.</p>
             </div>
             <div class="principle">
                 <i class="principle__icon principle__icon_best-drones"></i>
                 <span class="principle__title text-gradient text-gradient_color_redorange">Best drones</span>
-                <p class="principle__description text text_font-size_s text_line-height_m">Pellentesque eget nunc sit amet urna ullamcorper fermentum et eu leo.</p>
+                <p class="principle__description text text_font-size_s text_line-height_s">Pellentesque eget nunc sit amet urna ullamcorper fermentum et eu leo.</p>
             </div>
             <div class="principle">
                 <i class="principle__icon principle__icon_speed"></i>
                 <span class="principle__title text-gradient text-gradient_color_redorange">Speed</span>
-                <p class="principle__description text text_font-size_s text_line-height_m">Pellentesque eget nunc sit amet urna ullamcorper fermentum et eu leo.</p>
+                <p class="principle__description text text_font-size_s text_line-height_s">Pellentesque eget nunc sit amet urna ullamcorper fermentum et eu leo.</p>
             </div>
             <div class="principle">
                 <i class="principle__icon principle__icon_long-range"></i>
                 <span class="principle__title text-gradient text-gradient_color_redorange">Long range</span>
-                <p class="principle__description text text_font-size_s text_line-height_m">Pellentesque eget nunc sit amet urna ullamcorper fermentum et eu leo.</p>
+                <p class="principle__description text text_font-size_s text_line-height_s">Pellentesque eget nunc sit amet urna ullamcorper fermentum et eu leo.</p>
             </div>
         </div>
         <a class="button button_theme_blue">Ask for price</a>
     </section>
     <section class="drones page__drones" id="drones">
         <h2 class="title drones__title text-gradient text-gradient_color_redorange">Nature from the air</h2>
-        <p class="text drones__description text_font-size_s text_line-height_l">Mauris consequat libero metus, nec ultricies sem efficitur quis. Integer bibendum eget metus ac accumsan. Integer sit amet lacus egestas, semper est quis, viverra ex.</p>
+        <p class="text drones__description text_font-size_s text_line-height_m">Mauris consequat libero metus, nec ultricies sem efficitur quis. Integer bibendum eget metus ac accumsan. Integer sit amet lacus egestas, semper est quis, viverra ex.</p>
         <ol class="advantages-list drones__advantages-list">
             <li class="advantages-list__item">Pellentesque eget nunc sit amet urna ullamcorper fermentum et eu leo. Nunc vel nibh tempor, pharetra lectus congue, luctus orci.</li>
             <li class="advantages-list__item">Mauris consequat libero metus, nec ultricies sem efficitur quis. Integer bibendum eget metus ac accumsan.</li>
@@ -80,7 +85,7 @@
         <article class="product">
             <div class="product__article">
                 <h2 class="title product__title text-gradient text-gradient_color_redorange">Nature from the air</h2>
-                <p class="text product__description text_font-size_s text_line-height_l">Pellentesque eget nunc sit amet urna ullamcorper fermentum et eu leo. Nunc vel nibh tempor, pharetra lectus congue, luctus orci nec ultricies sem efficitur quis. Integer bibendum eget metus ac accumsan.</p>
+                <p class="text product__description text_font-size_s text_line-height_m">Pellentesque eget nunc sit amet urna ullamcorper fermentum et eu leo. Nunc vel nibh tempor, pharetra lectus congue, luctus orci nec ultricies sem efficitur quis. Integer bibendum eget metus ac accumsan.</p>
                 <a class="button button_theme_blue">Ask for price</a>
             </div>
             <div class="products__video">
@@ -93,7 +98,7 @@
         <article class="product">
             <div class="product__article">
                 <h2 class="title product__title text-gradient text-gradient_color_redorange">City from the air</h2>
-                <p class="text product__description text_font-size_s text_line-height_l">Mauris consequat libero metus, nec ultricies sem efficitur quis. Integer bibendum eget metus ac accumsan. Integer sit amet lacus egestas, semper est quis, viverra ex. Pellentesque eget nunc sit amet urna ullamcorper fermentum et eu leo.</p>
+                <p class="text product__description text_font-size_s text_line-height_m">Mauris consequat libero metus, nec ultricies sem efficitur quis. Integer bibendum eget metus ac accumsan. Integer sit amet lacus egestas, semper est quis, viverra ex. Pellentesque eget nunc sit amet urna ullamcorper fermentum et eu leo.</p>
                 <a class="button button_theme_blue">Ask for price</a>
             </div>
             <div class="products__video">
@@ -117,7 +122,7 @@
         <img class="page__map-image" src="styles/img/page/map.png" alt="Our location">
     </section>
     <footer class="page__footer">
-        <p class="text page__footer-text text_font-size_s text_line-height_l">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.Try awsome tool for desgners <strong>symu.co</strong></p>
+        <p class="text page__footer-text text_font-size_s text_line-height_m">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.Try awsome tool for desgners <strong>symu.co</strong></p>
     </footer>
 </body>
 </html>
