--- a/dev/assets/index.html
+++ b/dev/assets/index.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="shortcut icon" type="image/ico" href="favicon.ico">
     <link rel="stylesheet" href="styles/index.min.css">
-    <script src="scripts/script.min.js"></script>
     <title>DroneZone - Film your event with us!</title>
 </head>
 <body class="page">
@@ -21,11 +20,11 @@
                 </div>
                 <nav class="menu header__menu">
                     <ul class="menu__items">
-                        <li class="menu__item"><a href="#home" class="menu__link">Home</a></li>
-                        <li class="menu__item"><a href="#about" class="menu__link">About</a></li>
-                        <li class="menu__item"><a href="#drones" class="menu__link">Our drones</a></li>
-                        <li class="menu__item"><a href="#products" class="menu__link">Our realizations</a></li>
-                        <li class="menu__item"><a href="#contact" class="menu__link">Contact</a></li>
+                        <li class="menu__item"><a data-target="#home" class="menu__link">Home</a></li>
+                        <li class="menu__item"><a data-target="#about" class="menu__link">About</a></li>
+                        <li class="menu__item"><a data-target="#drones" class="menu__link">Our drones</a></li>
+                        <li class="menu__item"><a data-target="#products" class="menu__link">Our realizations</a></li>
+                        <li class="menu__item"><a data-target="#contact" class="menu__link">Contact</a></li>
                     </ul>
                 </nav>
             </div>
@@ -126,5 +125,8 @@
     <footer class="page__footer">
         <p class="text page__footer-text text_font-size_s text_line-height_m">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Try awsome tool for desgners <strong>symu.co</strong></p>
     </footer>
+
+    <script src="scripts/jquery.min.js"></script>
+    <script src="scripts/script.min.js"></script>
 </body>
 </html>
