[chg] Fixed bug with window resizing and menu state changing, fixed bug with header image support for IE and Firefox

--- a/dev/assets/index.html
+++ b/dev/assets/index.html
@@ -42,7 +42,7 @@
                 </div>
             </section>
         </div>
-        <div class="header__image-container"></div>
+        <img src="styles/img/header/header-bg.png" alt="" class="header__image">
     </header>
     <section class="about page__about" id="about">
         <div class="about__principles">
