[chg] Fixed logo link

--- a/dev/assets/index.html
+++ b/dev/assets/index.html
@@ -13,7 +13,7 @@
         <div class="header__content">
             <div class="header__navigation">
                 <div class="logo header__logo clearfix">
-                    <a class="logo__link"><strong>Drone</strong>Zone</a>
+                    <a class="logo__link" href=""><strong>Drone</strong>Zone</a>
                 </div>
                 <div class="header__burger clearfix">
                     <button type="button" class="burger burger_size_normal"></button>
